--- a/week_12/day_01/cats_homework_start_point/index.html
+++ b/week_12/day_01/cats_homework_start_point/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Frontend JS</title>
+  <title>Cats...</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="app.js"></script>
 </head>
+<h1>Cats...</h1>
 <body>
   <section id="cats">
     <!-- <ul class="cat">
