wk12 d2 - homework - cc E & G buttons working

--- a/week_12/day_02/google_maps_start/index.html
+++ b/week_12/day_02/google_maps_start/index.html
@@ -13,6 +13,12 @@
 
   <div id="main-map"></div>
 
+  <button id="cceButton">CodeClan Edinburgh</button>
+
+  <button id="ccgButton">CodeClan Glasgow</button>
+
+  <button id="whereAmIBtn">Where am I?</button>
+
 </body>
 
 </html>
