wk12 wkd homework - initial commit

--- a/week_12/day_04/canvas_start_point/index.html
+++ b/week_12/day_04/canvas_start_point/index.html
@@ -6,6 +6,7 @@
     <link rel='stylesheet' type='text/css' href='main.css'>
   </head>
   <body>
-   
+   <canvas id="main-canvas" width="600" height="500"></canvas>
+   <input type="color" id="input-color">
   </body>
 </html>
