wk12 wkd homework - initial commit

--- a/week_12/day_05/homework_start/public/index.html
+++ b/week_12/day_05/homework_start/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/main.css">
     <script src="js/bundle.js"></script>
-    <title>Star Journey</title>
+    <title>Beers</title>
   </head>
   <body>
-    <h1>Star Journey</h1>
-    <select id="planet-select">
-      <option selected disabled>Select Your Destination</option>
+    <h1>Beers</h1>
+    <select id="beer-select">
+      <option value="" selected disabled>Select Your Beer</option>
     </select>
-    <div id="planet-detail-view"></div>
+    <div id="beer-detail-view"></div>
   </body>
 </html>
