wk12 wkd homework - all ship images added

--- a/week_12/day_05/homework/public/index.html
+++ b/week_12/day_05/homework/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script src="js/bundle.js"></script>
+  <link rel="icon" href="images/favicon.ico">
   <title>Star Journey</title>
 </head>
 <body>
