wk12 wkd homework - styling complete

--- a/week_12/day_05/homework/public/index.html
+++ b/week_12/day_05/homework/public/index.html
@@ -11,16 +11,16 @@
 <body>
   <header>
     <h1>Star Journey</h1>
+    <h2>Where in the Galaxy do you want to go?</h2>
   </header>
-  <h2>Where in the Galaxy do you want to go?</h2>
   <div id="main-div">
-    <div id="planet-div">
+    <div  style="word-wrap: break-word; width: 425px" id="planet-div">
       <select id="planet-select">
         <option selected disabled>Select Your Destination</option>
       </select>
       <div id="planet-detail-view"></div>
     </div>
-    <div id="ship-div">
+    <div style="word-wrap: break-word; width: 425px" id="ship-div">
       <select id="ship-select">
         <option selected disabled>Select Your Spaceship</option>
       </select>
